--- a/public/room.html
+++ b/public/room.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css"/>
+    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css"/>
   </head>
   <body>
     <nav class="navbar navbar-default">
