implemented socket.io sample

--- a/public/room.html
+++ b/public/room.html
@@ -45,5 +45,9 @@
     </nav>
     <div id="root"></div>
     <script src="/js/index.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
   </body>
 </html>
